# PWACG

./: .gitignore  LICENSE  MANIFEST.in  README.md  create_all_scripts.py  pyproject.toml  setup.cfg
Tensor/: BASE.py  CacheTensor.py  FUNC.py  RunCacheTensor.py  filter.py  get_P_f.py  merge.py  tools.py
config/: Tutorials.json  generator_combine.json  generator_kk.json  generator_pipi.json  latex.json  logconfig_draw.json  logconfig_fit.json  logconfig_lasso.json  logconfig_select.json  parameters.json  pwa_info_ctrl.json  pwa_info_kk.json  pwa_info_pipi.json
create_code/: create_control.py  prepare_all_collection.py
dlib/: dplex.py  json_to_md.py
dmultiprocess/: control.py  multiprocess_interface.py
documentation/: README_CN.md  Tutorial_CN.md  Tutorial_EN.md
picture/: my_plot.py  significance_bin.py
picture/sigma/: 3-sigma.json  4-sigma.json  5-sigma.json  6-sigma.json
pwa/: calculate_annex.py  calculate_frame.py  propogator.py  pwa.py  pwa_draw_lh.py  pwa_draw_wt.py  pwa_select.py  pwa_wt.py
templates/: batch_run_template.py  batch_template.py  dplot_run_template.py  dplot_template.py  draw_lh_run_template.py  draw_lh_template.py  draw_wt_run_template.py  draw_wt_template.py  fit_run_template.py  fit_template.py  head.py  lasso_run_template.py  lasso_template.py  pull_run_template.py  pull_template.py  scan_draw.py  select_run_template.py  select_template.py
templates/batch_script/: batch_pull.py  branch_template.py  calFractionError.py  neg_error_index.py  pull_template.py  randomArgs.py  scanFraction.py  scanFreedom.py  scanLikelihood.py  (+3 more)
